titel bar scrolled mee

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ Orin Habich 10689508-->
   </head>
   <body >
     <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12" >
-        <h1 id="mainTitle"><center><b>Schade door vuurwerk</b></center></h1>
-        <h4 id = "chooseYear"><center><b>Kies een jaarwisseling </b>
+    <div class="row"  >
+      <div id="barTitle" class="col-md-12" style="position: fixed; z-index: 10;">
+        <h1 id="mainTitle" ><center><b>Schade door vuurwerk</b></center></h1>
+        <h4 id="chooseYear"><center><b>Jaarwisseling </b>
           <select class="select">
 
           </select>
@@ -32,9 +32,9 @@ Orin Habich 10689508-->
       </div>
     </div>
 
-
     <div class="row">
       <div class="col-sm-12" >
+        <h2 id="placeholderTitle">placeholderTitle<br>line two </h2>
         <h2 class="subheader"><b>Mens</b></h2>
         <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#sourceSEH">Bronnen</button>
         <div id="sourceSEH" class="collapse">
