cleanup, Code over several files

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ Orin Habich 10689508-->
     <script src="code/javascript/libraries//queueVersion1.js"></script>
     <script src="code/javascript/helpers.js"></script>
     <script src="code/javascript/piecharts.js"></script>
+    <script src="code/javascript/linechart.js"></script>
+    <script src="code/javascript/barcharts.js"></script>
     <script src="code/javascript/main.js"></script>
   </head>
 
