images all in docs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Orin Habich 10689508-->
   <head>
     <meta charset="UTF-8">
     <title>Schade door vuurwerk</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="docs/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="code/css/bootstrap.css">
     <link rel="stylesheet" href="code/css/main.css">
     <script src="code/javascript/libraries/jqueryAjax.js"></script>
@@ -150,7 +150,7 @@ Orin Habich 10689508-->
       </div>
       <div class="col-md-6" id="infographic">
         <div class="img-holder">
-          <img src="images/backgroundFireworks.png" class="img-rounded"
+          <img src="docs/backgroundFireworks.png" class="img-rounded"
             alt="image description"/>
           <div id="textWindow1" class="tooltipInfo"><b>Veel vervuilende stoffen</b>
             <span class="content">
