cleanup, start report

--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@ Orin Habich 10689508-->
       </div>
       <div class="col-md-2"  >
         <h4 id="titleAge"></h4>
-        <svg id = "svgPerAge" width="240" height="240"></svg>
+        <svg id = "svgPerAge" width="250" height="250"></svg>
       </div>
       <div class="col-md-2" >
         <h4 id="titleTypeFireworks"></h4>
-          <svg id = "svgPerTypeFireworks" width="240" height="240"></svg>
+          <svg id = "svgPerTypeFireworks" width="250" height="250"></svg>
       </div>
       <div class="col-md-2" >
         <h4 id="titleBystander"></h4>
-        <svg id = "svgPerBystander" width="240" height="240"></svg>
+        <svg id = "svgPerBystander" width="250" height="250"></svg>
       </div>
       <div class="col-md-2" >
         <h4 id="titleStatusFireworks"></h4>
-        <svg id = "svgPerStatusFireworks" width="240" height="240"></svg>
+        <svg id = "svgPerStatusFireworks" width="250" height="250"></svg>
       </div>
     </div>
 
@@ -154,7 +154,7 @@ Orin Habich 10689508-->
             alt="image description"/>
           <div id="textWindow1" class="tooltipInfo"><b>Veel vervuilende stoffen</b>
             <span class="content">
-              3.000.000 kilo afval van vuurwerk! Ongeveer 100.000 kilo barium,
+              Ongeveer 100.000 kilo barium,
               40.000 kilo koper, 30.000 kilo strontium, 10.000 kilo titaan, en
               5.000 kilo antimoon, deze giftige stoffen komen elk jaar tijdens de
               jaarwisseling bij het afsteken van consumentenvuurwerk in het
@@ -187,15 +187,14 @@ Orin Habich 10689508-->
             <span class="content">
               De resten van de verpakking gemaakt uit karton,
               papier, plastic en metaal worden als afval op de grond
-              achtergelaten.
+              achtergelaten. Bij elkaar is dit bijna 3.000.000 kilo.
             </span></div>
           <div id="textWindow6" class="tooltipInfo"><b>Smog</b>
             <span class="content">
               Meestal is er tijdens de jaarwisseling sprake van smog; een
               periode van tijdelijk zeer verontreinigde lucht.
               De beperking van het zicht is soms zo ernstig dat hulpdiensten
-              niet kunnen uitrukken. De vorming van smog hangt sterk af van de
-              weersomstandigheden.
+              niet kunnen uitrukken.
             </span></div>
         </div>
       </div>
