--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ Orin Habich 10689508-->
     <script src="code/javascript/libraries/jqueryAjax.js"></script>
     <script src="code/javascript/libraries/bootstrap.js"></script>
     <script src="code/javascript/libraries/d3version4.js"></script>
-    <script src="code/javascript/libraries/tip.js"></script>
     <script src="code/javascript/libraries//queueVersion1.js"></script>
     <script src="code/javascript/helpers.js"></script>
     <script src="code/javascript/piecharts.js"></script>
@@ -25,7 +24,7 @@ Orin Habich 10689508-->
   <!--main title -->
   <div class="container-fluid">
     <div class="row"  >
-      <div id="barTitle" class="col-md-12" style="position: fixed; z-index: 10;">
+      <div id="barTitle" class="col-md-12" >
         <h1 id="mainTitle"><b>Schade door vuurwerk</b></h1>
         <h4 id="chooseYear"><b>Jaarwisseling</b>
           <select class="select"></select></h4>
