percentages aan piecharts toegevoegd

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Orin Habich 10689508-->
       <input class = "checkbox" type="checkbox" value="TypeFireworks"
         style="float: left; margin-top: 8px;">
         <label class="indented-checkbox-text">
-            Naar soort vuurwerk<br>
+            Sier- of knalvuurwerk<br>
         </label>
       <input class = "checkbox" type="checkbox" value="Bystander"
         style="float: left; margin-top: 8px;">
