--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 Minor programmeren; project
 Orin Habich 10689508-->
 <!DOCTYPE html>
+<html lang="nl">
   <head>
     <meta charset="UTF-8">
     <title>Schade door vuurwerk</title>
@@ -63,68 +64,68 @@ Orin Habich 10689508-->
     <div class="row">
       <div class="col-sm-6" >
         <h3>Vuurwerkslachtoffers naar de spoedeisende hulp</h3>
-        <svg id = "svgFirstAid" width="700" height="400"></svg>
+        <svg id="svgFirstAid" width="700" height="400"></svg>
       </div>
       <div class="col-md-6" id="placeForFigureHuman">
-        <h3 id = "titleInjuriesSection"></h3>
+        <h3 id="titleInjuriesSection">Lichamelijk letsel</h3>
       </div>
     </div>
 
     <!--piecharts -->
     <div class="row">
-      <h3 id = "titlePiechartsSection"></h3>
+      <h3 id="titlePiechartsSection">Onderverdeling slachtoffers</h3>
       <div class="col-md-4" >
-      <input class = "checkbox" type="checkbox" value = "Age"
+      <input class="checkbox" type="checkbox" value = "PerAge"
         style="float: left; margin-top: 8px;">
         <label class="indented-checkbox-text">
           Per leeftijdsklasse<br>
         </label>
-      <input class = "checkbox" type="checkbox" value="TypeFireworks"
+      <input class="checkbox" type="checkbox" value="PerTypeFireworks"
         style="float: left; margin-top: 8px;">
         <label class="indented-checkbox-text">
             Sier- of knalvuurwerk<br>
         </label>
-      <input class = "checkbox" type="checkbox" value="Bystander"
+      <input class="checkbox" type="checkbox" value="PerBystander"
         style="float: left; margin-top: 8px;">
         <label class="indented-checkbox-text">
           Zelf afgestoken of omstander<br>
         </label>
-      <input class = "checkbox" type="checkbox" value="StatusFireworks"
+      <input class="checkbox" type="checkbox" value="PerStatusFireworks"
         style="float: left; margin-top: 8px;">
         <label class="indented-checkbox-text">
           Legaal of illegaal vuurwerk<br>
         </label>
       </div>
-      <div class="col-md-2"  >
-        <h4 id="titleAge"></h4>
-        <svg id = "svgPerAge" width="250" height="250"></svg>
+      <div class="col-md-2" id="PerAge">
+        <h4><b>Per leeftijdsklasse</b></h4>
+        <svg id="svgPerAge" width="250" height="250"></svg>
       </div>
-      <div class="col-md-2" >
-        <h4 id="titleTypeFireworks"></h4>
-          <svg id = "svgPerTypeFireworks" width="250" height="250"></svg>
+      <div class="col-md-2" id="PerTypeFireworks">
+        <h4><b>Sier- of knalvuurwerk</b></h4>
+          <svg id="svgPerTypeFireworks" width="250" height="250"></svg>
       </div>
-      <div class="col-md-2" >
-        <h4 id="titleBystander"></h4>
-        <svg id = "svgPerBystander" width="250" height="250"></svg>
+      <div class="col-md-2" id="PerBystander">
+        <h4><b>Zelf afgestoken of omstander</b></h4>
+        <svg id="svgPerBystander" width="250" height="250"></svg>
       </div>
-      <div class="col-md-2" >
-        <h4 id="titleStatusFireworks"></h4>
-        <svg id = "svgPerStatusFireworks" width="250" height="250"></svg>
+      <div class="col-md-2" id="PerStatusFireworks">
+        <h4><b>Legaal of illegaal vuurwerk</b></h4>
+        <svg id="svgPerStatusFireworks" width="250" height="250"></svg>
       </div>
     </div>
 
     <!--barchart complaints -->
     <div class="row">
-      <div class="col-md-6" >
+      <div class="col-md-6">
         <h3>Meldingen bij <a href="https://vuurwerkoverlast.nl/">
          Meldpunt vuurwerkoverlast</a></h3>
-        <svg id = "svgComplaints" width="700" height="400"></svg>
+        <svg id="svgComplaints" width="700" height="400"></svg>
       </div>
     </div>
 
     <!--title 'milieu' section -->
     <div class="row">
-      <div class="col-md-12" >
+      <div class="col-md-12">
         <h2 class="subheader"><b>Milieu</b></h2>
         <button type="button" class="btn btn-info" data-toggle="collapse"
           data-target="#sourcesFijnstof">Bronnen</button>
@@ -144,14 +145,15 @@ Orin Habich 10689508-->
     <!--linechart and infographic-->
     <div class="row">
       <div class="col-md-6">
-        <h3 id = "titleLinechart"></h3>
-        <svg id = "svgLinechart" width="800" height="400"></svg>
+        <h3 id="titleLinechart">Fijnstof (PM10) rond de jaarwisseling</h3>
+        <svg id="svgLinechart" width="800" height="400"></svg>
       </div>
       <div class="col-md-6" id="infographic">
         <div class="img-holder">
           <img src="docs/backgroundFireworks.png" class="img-rounded"
             alt="image description"/>
-          <div id="textWindow1" class="tooltipInfo"><b>Veel vervuilende stoffen</b>
+          <div id="textWindow1" class="tooltipInfo" style="position: relative;
+              bottom: 500px; left: 30px;"><b>Veel vervuilende stoffen</b>
             <span class="content">
               Ongeveer 100.000 kilo barium,
               40.000 kilo koper, 30.000 kilo strontium, 10.000 kilo titaan, en
@@ -159,14 +161,16 @@ Orin Habich 10689508-->
               jaarwisseling bij het afsteken van consumentenvuurwerk in het
               milieu terecht.
             </span></div>
-          <div id="textWindow2" class="tooltipInfo"><b>Explosie in de lucht</b>
+          <div id="textWindow2" class="tooltipInfo" style="position: relative;
+          bottom: 470px; left: 360px;"><b>Explosie in de lucht</b>
             <span class="content">
               Bij de explosie in de lucht vindt de grootste uitstoot van
               milieuvervuilende (en giftige) stoffen plaats. Vervolgens
               verspreiden de luchtvervuilende stoffen zich en komen daarna op
               de grond terecht.
             </span></div>
-          <div id="textWindow3" class="tooltipInfo"><b>Zware metalen</b>
+          <div id="textWindow3" class="tooltipInfo" style="position: relative;
+              bottom: 330px; left: 150px;"><b>Zware metalen</b>
             <span class="content">
               De belangrijkste verontreinigende stoffen die ontstaan zijn
               (ultra)fijn stof en gassen als koolmonoxide, kooldioxide, stikstof-
@@ -174,7 +178,8 @@ Orin Habich 10689508-->
               kaliumcarbonaat) en zware metalen die zich aan fijn stofdeeltjes
               hechten (o.a. barium, koper, strontium, titaan en antimoon).
             </span></div>
-          <div id="textWindow4" class="tooltipInfo"><b>Directe omgeving</b>
+          <div id="textWindow4" class="tooltipInfo" style="position: relative;
+          bottom: 270px; left: 440px;"><b>Directe omgeving</b>
             <span class="content">
               Van de stoffen die in de lucht terecht komen, valt 90
               procent in de directe omgeving weer op de grond. Rond 68 procent
@@ -182,13 +187,15 @@ Orin Habich 10689508-->
               rechtstreeks op de oppervlakte van het water. De resterende 22
               procent blijft op de grond liggen.
             </span></div>
-          <div id="textWindow5" class="tooltipInfo"><b>Afvalresten</b>
+          <div id="textWindow5" class="tooltipInfo" style="position: relative;
+              bottom: 140px; left: 450px;"><b>Afvalresten</b>
             <span class="content">
               De resten van de verpakking gemaakt uit karton,
               papier, plastic en metaal worden als afval op de grond
               achtergelaten. Bij elkaar is dit bijna 3.000.000 kilo.
             </span></div>
-          <div id="textWindow6" class="tooltipInfo"><b>Smog</b>
+          <div id="textWindow6" class="tooltipInfo" style="position: relative;
+              bottom: 300px; left: 70px;"><b>Smog</b>
             <span class="content">
               Meestal is er tijdens de jaarwisseling sprake van smog; een
               periode van tijdelijk zeer verontreinigde lucht.
@@ -218,10 +225,11 @@ Orin Habich 10689508-->
 
         <!--barchart damage -->
         <h3>Materi&euml;le schade bij particulieren</h3>
-        <svg id = "svgDamage" width="700" height="400"></svg>
+        <svg id="svgDamage" width="700" height="400"></svg>
       </div>
     </div>
   </div>
 
-  <h5 style= "float: right">By Orin Habich 10689508</h5>
+  <h5 style="float: right">By Orin Habich 10689508</h5>
   </body>
+</html>
